crates/rulesteward-fapolicyd/tests/snapshots/fapd-E01__exe-dir-unknown.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[fapd-E01] sev=Error line=3 col=20 span=159..175 :: unknown attribute `exe_dir`
