crates/rulesteward-fapolicyd/tests/snapshots/fapd-E01__unknown-on-both-sides.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=2
[fapd-E01] sev=Error line=1 col=23 span=22..30 :: unknown attribute `weirdo`
[fapd-E01] sev=Error line=1 col=50 span=49..55 :: unknown attribute `wat`
