crates/rulesteward-fapolicyd/tests/snapshots/fapd-E01__unknown-xyz.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[fapd-E01] sev=Error line=1 col=7 span=6..11 :: unknown attribute `xyz`
